Replace pinned event list

--- a/res/css/views/right_panel/_BaseCard.pcss
+++ b/res/css/views/right_panel/_BaseCard.pcss
@@ -66,6 +66,14 @@ limitations under the License.
                 text-overflow: ellipsis;
             }
 
+            .mx_BaseCard_header_title_new_heading {
+                font: var(--cpd-font-body-md-medium);
+                color: var(--cpd-color-text-secondary);
+                overflow: hidden;
+                white-space: nowrap;
+                text-overflow: ellipsis;
+            }
+
             .mx_BaseCard_header_title_button--option {
                 position: relative;
                 width: var(--BaseCard_header-button-size);
