--- a/res/css/views/rooms/_PinnedEventTile.pcss
+++ b/res/css/views/rooms/_PinnedEventTile.pcss
@@ -22,19 +22,19 @@ limitations under the License.
     .mx_PinnedEventTile_wrapper {
         display: flex;
         flex-direction: column;
-        // No 3px token in compound
-        gap:3px;
+        /* No 3px token in compound */
+        gap: 3px;
         width: 100%;
 
         .mx_PinnedEventTile_top {
             display: flex;
-            // No 3px token in compound
+            /* No 3px token in compound */
             gap: 3px;
             justify-content: space-between;
             align-items: center;
 
             .mx_PinnedEventTile_IconButton {
-                // Override default button size
+                /* Override default button size */
                 --cpd-icon-button-size: 24px !important;
             }
 
