--- a/res/css/views/elements/_ServerPicker.pcss
+++ b/res/css/views/elements/_ServerPicker.pcss
@@ -18,7 +18,9 @@ limitations under the License.
     margin-bottom: 14px;
     padding-bottom: $spacing-16;
     border-bottom: 1px solid rgba(141, 151, 165, 0.2);
-    display: grid;
+    
+    display: none;
+    
     grid-template-columns: auto min-content;
     grid-template-rows: auto auto auto;
     font: var(--cpd-font-body-md-regular);
